content/docs/3.x/getting-started/configuration.md
# Configuration

- [Introduction](#introduction)
- [App URL](#app-url)
- [Email](#email)
- [Force HTTPS](#force-https)

## Introduction

VitoDeploy uses environment variables to configure the app.

If you've installed VitoDeploy on a VPS, You should see a `.env` file in the root of the project (
`/home/vito/vito/.env`). It is a normal Laravel env file which you can modify some of them.

If you are using the Docker version, you need to update the environment variables of your container.

## App URL

It is crucial to set the `APP_URL` environment variable to your Vito instance URL to ensure that features like Vito Logs
work properly.

## Email

To enable Vito to send you emails, You need to configure your mail server. Modify the following on the `.env` file

```dotenv
MAIL_HOST={YOUR-SMTP-HOST}
MAIL_PORT={YOUR-SMTP-PORT}
MAIL_USERNAME={YOUR-SMTP-USERNAME}
MAIL_PASSWORD={YOUR-SMTP-PASSWORD}
MAIL_ENCRYPTION=null
MAIL_FROM_ADDRESS={YOUR-SMTP-MAIL-ADDRESS}
```

And then run the following commands inside the root directory of the project to apply the changes

```sh
php artisan optimize:clear
php artisan optimize
sudo supervisorctl restart worker:*
```

For docker version you will need to restart/re-create the container.

> **Warning**
>
> Currently Vito supports only SMTP as the mail driver

## Force HTTPS

To force HTTPS on your Vito instance, you need to set the `FORCE_HTTPS` environment variable to `true` in the `.env` file.

```dotenv
FORCE_HTTPS=true
```

This will activate the `URL::forceScheme('https')` or `URL::forceHttps()` in the Laravel application, ensuring that all URLs generated by the application use HTTPS.